# inverted_pendulum_rl_control_ros

./: .gitignore  README.md
inverted_pendulum_rl_control/: CMakeLists.txt  package.xml
inverted_pendulum_rl_control/config/: target_stance.yaml
inverted_pendulum_rl_control/launch/: eval.launch  train.launch
inverted_pendulum_rl_control/models/: test_actor.pkl  trained_actor.pkl
inverted_pendulum_rl_control/scripts/: eval_ddpg.py  pid_control.py  train_ddpg.py
inverted_pendulum_rl_control/srv/: SaveModel.srv
rl_common/: CMakeLists.txt  package.xml  setup.py
rl_common/src/rl_common/: ddpg.py
