<?xml version="1.0"?>
<package format="2">
  <name>rl_common</name>
  <version>0.0.0</version>
  <description>The rl_common package</description>
  <maintainer email="dean@todo.todo">dean</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
